# AppCUI

./: .clang-format  .gitignore  .gitmodules  AppCUI.sln  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build.sh  buildMac.sh  colors.html  development.html  genindex.html  index.html  initialization.html  layout.html  objects.inv  search.html  searchindex.js  terminals.html  vcpkg.json  xterm-256color-mouse
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md
.github/workflows/: build-and-deploy-release.yml  build_to_release_zip.py  ci.yml  ci2.yml  cmake.yml  codeql-analysis.yml  deploy_release.yml  get_version.py  get_version_and_update.py  gh-pages.yml  increase_version.yml  msvc.yml  run_valgrind.sh  win_sdl2.py
AppCUI/: AppCUI.cpp  AppCUI.vcxproj  CMakeLists.txt  dllmain.cpp
AppCUI/include/: AppCUI.h  AppCUI.hpp  BitmapLoader.hpp  ControlContext.h  ControlContext.hpp  Features.hpp  IO.h  ImageLoader.hpp  Internal.h  Internal.hpp  Special.def
AppCUI/include/Terminal/: TerminalFactory.hpp
AppCUI/include/Terminal/NcursesTerminal/: NcursesTerminal.hpp
AppCUI/include/Terminal/SDLTerminal/: SDLTerminal.hpp
AppCUI/include/Terminal/WindowsTerminal/: WindowsTerminal.hpp
AppCUI/include/Unix/: Color.h  OSDefinitions.h  OSDefinitions.hpp  PlatformFolders.hpp  Whereami.hpp  os.h
AppCUI/include/Windows/: OSDefinitions.h  OSDefinitions.hpp  os.h
AppCUI/libs/: CMakeLists.txt
AppCUI/resources/: color_to_string_tables.py  column.ini  column_align.ini  column_width.ini  control_alignament.ini  control_layout.ini  fnv_hash.py  hash_builder_for_keyvalueparser.py  ini_parser_char_type_builder.py  init_parser_builder.py  key_value_char_type_builder.py  layout_hash_builder.py  number_create_base_translation_buffer.py  string_image_char_vector_builder.py  windows.rc.in
AppCUI/src/: AppCUI.natvis  CMakeLists.txt  ControlContext.hpp  Internal.hpp
AppCUI/src/3rdPartyLibs/: CMakeLists.txt
AppCUI/src/3rdPartyLibs/PNG/: CMakeLists.txt  lodepng.cpp
AppCUI/src/Application/: AbstractConsole.cpp  AbstractInput.cpp  AbstractTerminal.cpp  Application.cpp  CMakeLists.txt  CommandBar.cpp  CommandBarController.cpp  Config.cpp  ConsoleRenderer.cpp  Desktop.cpp  MacImplementation.cpp  MenuBar.cpp  ToolTip.cpp  WindowsImplementation.cpp
AppCUI/src/Clipboard/: ClipboardDefault.cpp  ClipboardSDL.cpp  ClipboardWindows.cpp
AppCUI/src/Console/: CMakeLists.txt  Canvas.cpp  CharacterBuffer.cpp  Clip.cpp  Image.cpp  ProgressStatus.cpp  Rect.cpp  Renderer.cpp
AppCUI/src/Controls/: Button.cpp  CMakeLists.txt  CanvasViewer.cpp  CharacterTable.cpp  CheckBox.cpp  ColorPicker.cpp  ColumnsHeader.cpp  ColumnsHeaderView.cpp  ComboBox.cpp  Control.cpp  Desktop.cpp  Factory.cpp  Grid.cpp  ImageView.cpp  ImageViewer.cpp  KeySelector.cpp  Label.cpp  ListView.cpp  Menu.cpp  MessageBox.cpp  NumericSelector.cpp  Panel.cpp  Password.cpp  PropertyList.cpp  RadioBox.cpp  Splitter.cpp  Tab.cpp  TextArea.cpp  TextControlDefaultMenu.cpp  TextField.cpp  Tree.cpp  TreeView.cpp  UserControl.cpp  Window.cpp
AppCUI/src/Dialogs/: CMakeLists.txt  FileDialog.cpp  FolderDialog.cpp  MessageBox.cpp  ThemeEditor.cpp  WindowManager.cpp
AppCUI/src/Graphics/: BitmapLoader.cpp  CMakeLists.txt  Canvas.cpp  CharacterBuffer.cpp  Clip.cpp  CodePage.cpp  Image.cpp  ImageLoader.hpp  JPGLoader.cpp  PNGLoader.cpp  ProgressStatus.cpp  Rect.cpp  Renderer.cpp
AppCUI/src/Log/: CMakeLists.txt  ErrorList.cpp  Log.cpp
AppCUI/src/OS/: CMakeLists.txt  DataObject.cpp  DateTime.cpp  FileSystemCommon.cpp  IFile.cpp  MemoryFile.cpp  StaticFileMethods.cpp
AppCUI/src/OS/Clipboard/: CMakeLists.txt  Clipboard.cpp  ClipboardDefault.cpp  ClipboardSDL.cpp  ClipboardWindows.cpp
AppCUI/src/OS/Unix/: CMakeLists.txt  Clipboard.cpp  Color.cpp  Console.cpp  ConsoleDefault.cpp  File.cpp  FileSystem.cpp  Input.cpp  InputDefault.cpp  Library.cpp  OS.cpp  OSDefinitions.hpp  Path.cpp  PlatformFolders.cpp  PlatformFolders.hpp  Terminal.cpp  TerminalInput.cpp  TerminalScreen.cpp  Whereami.cpp
AppCUI/src/OS/Windows/: CMakeLists.txt  Clipboard.cpp  Console.cpp  File.cpp  FileSystem.cpp  Input.cpp  Library.cpp  OS.cpp  OSDefinitions.hpp  Path.cpp  Terminal.cpp  TerminalFactory.cpp  WindowsTerminal.cpp
AppCUI/src/Terminal/: CMakeLists.txt  TerminalFactory.hpp
AppCUI/src/Terminal/Factory/: CMakeLists.txt  Unix.cpp  Windows.cpp
AppCUI/src/Terminal/NcursesTerminal/: CMakeLists.txt  Color.cpp  NcursesTerminal.cpp  NcursesTerminal.hpp  NcursesTerminalInput.cpp  NcursesTerminalScreen.cpp
AppCUI/src/Terminal/SDLTerminal/: CMakeLists.txt  SDLTerminal.cpp  SDLTerminal.hpp  SDLTerminalInput.cpp  SDLTerminalScreen.cpp  Terminal.cpp  TerminalInput.cpp  TerminalScreen.cpp
AppCUI/src/Terminal/TestTerminal/: CMakeLists.txt  TestTerminal.cpp  TestTerminal.hpp
AppCUI/src/Terminal/WindowsTerminal/: CMakeLists.txt  WindowsTerminal.cpp  WindowsTerminal.hpp
AppCUI/src/Utils/: Array32.cpp  Buffer.cpp  CMakeLists.txt  ColorUtils.cpp  IniObject.cpp  KeyUtils.cpp  KeyValueParser.cpp  Number.cpp  NumericFormatter.cpp  PropertyValue.cpp  Size.cpp  String.cpp  UnicodeStringBuilder.cpp  ini_parser_char_type_builder.py
Examples/BadApple/: CMakeLists.txt  main.cpp
Examples/Buttons/: CMakeLists.txt  main.cpp
Examples/CharacterTable/: CMakeLists.txt  main.cpp
Examples/Checkboxes/: CMakeLists.txt  main.cpp
Examples/CodePage/: CMakeLists.txt  main.cpp
Examples/ColorPicker/: CMakeLists.txt  main.cpp
Examples/ComboBox/: CMakeLists.txt  main.cpp
Examples/CommandBar/: CMakeLists.txt  main.cpp
Examples/ContextMenu/: CMakeLists.txt  main.cpp
Examples/CurrentPath/: CMakeLists.txt  main.cpp
Examples/CustomDesktop/: CMakeLists.txt  main.cpp
Examples/ErrorList/: CMakeLists.txt  main.cpp
Examples/FileDialog/: CMakeLists.txt  main.cpp
Examples/FolderDialog/: CMakeLists.txt  (+1 more)
Tester/: CMakeLists.txt  Tester.cpp  Tester.vcxproj
_sources/: colors.rst.txt  index.rst.txt  initialization.rst.txt  layout.rst.txt  terminals.rst.txt
cmake/: CMakeRC.cmake  FindSDL2.cmake  FindSDL2TTF.cmake  example.cmake  get_subfolders.cmake
docs/: codepage437.txt
(+150 files in other folders)
