add_subdirectory(Factory)
add_subdirectory(TestTerminal)
if (MSVC)
    if (SDL2_FOUND)
        add_subdirectory(SDLTerminal)
    endif()
    add_subdirectory(WindowsTerminal)
else()  
    if (CURSES_FOUND)
        add_subdirectory(NcursesTerminal)
    endif()
    if (SDL2_FOUND)
        add_subdirectory(SDLTerminal)
    endif()
endif()